<resources>
    <string name="app_name">CoCoin</string>
    <string name="app_splash_name">CoCoin V1.2.0</string>
    <string name="app_info">
        CoCoin&#13;&#10;
        Copyright © Nightonke
    </string>
    <string name="action_settings">Settings</string>
    <string name="profile">PROFILE</string>
    <string name="feed">FEED</string>
    <string name="activity">ACTIVITY</string>
    <string name="title_activity_account_book">AccountBook</string>
    <string name="title_activity_tag_setting">TagSetting</string>
    <string name="custom_view">Custom view</string>
    <string name="tags_view">Tags view</string>
    <string name="months_view">Months view</string>
    <string name="list_view">List view</string>
    <string name="expense_report">Expense reports</string>
    <string name="sync">Sync to server</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="feedback">Feedback</string>
    <string name="about">About</string>
    <string name="today_empty">New day!</string>
    <string name="yesterday_empty">No records.</string>
    <string name="this_week_empty">New week!</string>
    <string name="last_week_empty">No records.</string>
    <string name="this_month_empty">New month!</string>
    <string name="last_month_empty">No records.</string>
    <string name="this_year_empty">Happy new year!</string>
    <string name="last_year_empty">No records.</string>
    <string name="january_short">Jan.</string>
    <string name="february_short">Feb.</string>
    <string name="march_short">Mar.</string>
    <string name="april_short">Apr.</string>
    <string name="may_short">May</string>
    <string name="june_short">June</string>
    <string name="july_short">July</string>
    <string name="august_short">Aug.</string>
    <string name="september_short">Sept.</string>
    <string name="october_short">Oct.</string>
    <string name="november_short">Nov.</string>
    <string name="december_short">Dec.</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">Marc</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="today_date_string">today</string>
    <string name="yesterday_date_string">yesterday</string>
    <string name="this_week_date_string">this week</string>
    <string name="last_week_date_string">last week</string>
    <string name="this_month_date_string">this month</string>
    <string name="last_month_date_string">last month</string>
    <string name="this_year_date_string">this year</string>
    <string name="last_year_date_string">last year</string>
    <string name="at">at </string>
    <string name="on">on </string>
    <string name="in">in </string>
    <string name="o_clock">o\'clock</string>
    <string name="monday_short">MON</string>
    <string name="tuesday_short">TUE</string>
    <string name="wednesday_short">WED</string>
    <string name="thursday_short">THU</string>
    <string name="friday_short">FRI</string>
    <string name="saturday_short">SAT</string>
    <string name="sunday_short">SUN</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="last">last </string>
    <string name="check">check</string>
    <string name="date_range_view">Date Range view</string>
    <string name="today_view_today">Today</string>
    <string name="today_view_yesterday">Yesterday</string>
    <string name="today_view_this_week">This Week</string>
    <string name="today_view_last_week">Last Week</string>
    <string name="today_view_this_month">This Month</string>
    <string name="today_view_last_month">Last Month</string>
    <string name="today_view_this_year">This Year</string>
    <string name="today_view_last_year">Last Year</string>
    <string name="tag_sum_pie">Sum Pie</string>
    <string name="tag_sum_histogram">Sum Histogram</string>
    <string name="tag_meal">Dinner</string>
    <string name="tag_closet">Clothing &amp; Footwear</string>
    <string name="tag_home">Home</string>
    <string name="tag_traffic">Traffic</string>
    <string name="tag_vehicle_maintenance">Vehicle Maintenance</string>
    <string name="tag_book">Book</string>
    <string name="tag_hobby">Hobby</string>
    <string name="tag_internet">Internet</string>
    <string name="tag_friend">Friend</string>
    <string name="tag_education">Education</string>
    <string name="tag_entertainment">Entertainment</string>
    <string name="tag_medical">Medical</string>
    <string name="tag_insurance">Insurance</string>
    <string name="tag_donation">Donation</string>
    <string name="tag_sport">Sport</string>
    <string name="tag_snack">Snack</string>
    <string name="tag_music">Music</string>
    <string name="tag_fund">Fund</string>
    <string name="tag_drink">Drink</string>
    <string name="tag_fruit">Fruit</string>
    <string name="tag_film">Film</string>
    <string name="tag_baby">Baby</string>
    <string name="tag_partner">Partner</string>
    <string name="tag_housing_loan">Housing Loan</string>
    <string name="tag_pet">Pet</string>
    <string name="tag_telephone_bill">Telephone Bill</string>
    <string name="tag_travel">Travel</string>
    <string name="tag_lunch">Lunch</string>
    <string name="tag_breakfast">Breakfast</string>
    <string name="tag_midnight_snack">Midnight Snack</string>
    <string name="password_tip">Input password to account book</string>
    <string name="toast_no_tag">Please select a tag.</string>
    <string name="toast_no_amount">Please enter the expense amount.</string>
    <string name="toast_password_wrong">Ooops...That\'s wrong!</string>
    <string name="toast_password_correct">That\'s it!</string>
    <string name="toast_save_successfully">Save successfully!</string>
    <string name="toast_save_failed">Ooops...Save fail!</string>
    <string name="toast_press_again_to_exit">Press again to say goodbye</string>
    <string name="sort_tags">Sort Tags</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="search">Search</string>
    <string name="tag_empty">No records!</string>
    <string name="undo">Undo</string>
    <string name="deleting">Delete this coCoinRecord</string>
    <string name="title_activity_edit_record">EditRecordActivity</string>
    <string name="from_invalid">The starting time is invalid!</string>
    <string name="to_invalid">The ending time is invalid!</string>
    <string name="account_book_name_hint">Account book title</string>
    <string name="user_name_hint">User name</string>
    <string name="user_email_hint">User email</string>
    <string name="test_user_name">Nightonke</string>
    <string name="test_user_email">Nightonke@gmail.com</string>
    <string name="expense_text">Expense</string>
    <string name="records_text">Records</string>
    <string name="month_limit_enable">Max expense limit monthly</string>
    <string name="month_limit">Max expense monthly</string>
    <string name="month_color_remind">Color remind</string>
    <string name="month_warning">Color remind when expense over</string>
    <string name="month_color_remind_type">Remind color</string>
    <string name="month_forbidden">Forbidden coCoinRecord money when out of limit</string>
    <string name="auto_back_up">Auto backup records</string>
    <string name="account_book_name">Name of account book</string>
    <string name="change_password">Change password</string>
    <string name="sort_tag">Sort tags</string>
    <string name="whether_show_picture">Show pictures in tags view account book</string>
    <string name="whether_show_circle">Doughnut-shape pie chart</string>
    <string name="default_user_name">You haven\'t logged on! After logging on, </string>
    <string name="default_user_email">you can save your records to cloud. Click me to do so!</string>
    <string name="help_cocoin_content_1"> ● CoCoin, Multi-view Accounting Application</string>
    <string name="help_cocoin_content_2">
        ● You can do the accounting job easily and use a password to protect your account book.
        Your account book\'s password will be set the first time you use CoCoin.
        Swipe the numerical part to left to add some remarks for your records.
        To check your account book, you can swipe down or click the menu icon in the top left corner.
    </string>
    <string name="help_cocoin_content_3">
        ● In the account book, you can find out a pie chart for your expenses today, yesterday, this week, last week, this month, last month, this year and last year.
        Try to click the blocks of the pie chart or the bars of histogram for details.
        All the charts in CoCoin can be clicked for details and there are some buttons near the charts to select a certain part(that\'s to small for click) in charts.
        If you wanna get more views, just open the left drawer menu.
    </string>
    <string name="help_cocoin_content_4">
        ● In custom time view, you can check all the expenses in a special time span.
        Click the button in the bottom right corner to set the time span.
    </string>
    <string name="help_cocoin_content_5">
        ● In the tag view, you can check all the expenses for different tags.
        Open the left drawer menu and you can see all the tags in your account book.
        Click a tag to jump to the expenses analyse for that tag.
    </string>
    <string name="help_cocoin_content_6">
        ● In the month view, you can check all the expenses in every month.
        Let\'s check how much you spent and how many records you accounted.
        Open the left drawer menu, there is a simple list for every month\'s expenses.
        And just as in the tag view, you can click to jump to a certain month.
    </string>
    <string name="help_cocoin_content_7">
        ● In the list view, you can do some update and query job here.
        Swipe a record left to edit and right to delete.
        Open the left drawer to set some query conditions or click the search button in the top right corner to query according to remarks.
    </string>
    <string name="help_cocoin_content_8">
        ● In the report view, you can generate your month or year report here.
    </string>
    <string name="help_cocoin_content_9">
        ● After signing in, you can sync your records to CoCoin\'s server.
    </string>
    <string name="help_cocoin_content_10">
        ● You can change some default settings.
        For instance, the name of your account book, the order of tags, whether remind you the limit of the month expense.
        If you enable the color remind function, after you account a record which made the expenses of this month is large that warning value, the color of interface will change.
    </string>
    <string name="help_cocoin_content_11"> ● Thanks for using CoCoin</string>
    <string name="reports_label">Reports</string>
    <string name="settings_fragment_label">Settings</string>
    <string name="date_range_report_label">Date Range Reports</string>
    <string name="custom_report_label">Custom Reports</string>
    <string name="tag_report_label">Tag Reports</string>
    <string name="monthly_report_label">Monthly Reports</string>
    <string name="list_report_label">List Report</string>
    <string name="expense_reports_label">Expense Reports</string>
</resources>