<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/cardMarginHorizontal"
                android:layout_marginTop="@dimen/cardMarginVertical"
                android:layout_marginRight="@dimen/cardMarginHorizontal"
                android:layout_marginBottom="@dimen/cardMarginVertical"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="2dp"
                app:cardElevation="2dp"
                app:cardPreventCornerOverlap="false"
                app:contentPadding="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/help_cocoin_image_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10dp" />

                        <TextView
                            android:id="@+id/help_cocoin_content_2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical|left"
                            android:layout_marginLeft="10dp"
                            android:gravity="left"
                            android:padding="10dp"
                            android:text="@string/help_cocoin_content_2"
                            android:textColor="@color/my_blue"
                            android:textSize="15sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/help_cocoin_image_2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp" />

                        <TextView
                            android:id="@+id/help_cocoin_content_3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical|left"
                            android:layout_marginLeft="10dp"
                            android:gravity="left"
                            android:padding="10dp"
                            android:text="@string/help_cocoin_content_3"
                            android:textColor="@color/my_blue"
                            android:textSize="15sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/help_cocoin_image_3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp" />

                        <TextView
                            android:id="@+id/help_cocoin_content_4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical|left"
                            android:layout_marginLeft="10dp"
                            android:gravity="left"
                            android:padding="10dp"
                            android:text="@string/help_cocoin_content_4"
                            android:textColor="@color/my_blue"
                            android:textSize="15sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/help_cocoin_image_4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp" />

                        <TextView
                            android:id="@+id/help_cocoin_content_5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical|left"
                            android:layout_marginLeft="10dp"
                            android:gravity="left"
                            android:padding="10dp"
                            android:text="@string/help_cocoin_content_5"
                            android:textColor="@color/my_blue"
                            android:textSize="15sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/help_cocoin_image_5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp" />

                        <TextView
                            android:id="@+id/help_cocoin_content_6"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical|left"
                            android:layout_marginLeft="10dp"
                            android:gravity="left"
                            android:padding="10dp"
                            android:text="@string/help_cocoin_content_6"
                            android:textColor="@color/my_blue"
                            android:textSize="15sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/help_cocoin_image_6"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp" />

                        <TextView
                            android:id="@+id/help_cocoin_content_7"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical|left"
                            android:layout_marginLeft="10dp"
                            android:gravity="left"
                            android:padding="10dp"
                            android:text="@string/help_cocoin_content_7"
                            android:textColor="@color/my_blue"
                            android:textSize="15sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/help_cocoin_image_7"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp" />

                        <TextView
                            android:id="@+id/help_cocoin_content_8"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical|left"
                            android:layout_marginLeft="10dp"
                            android:gravity="left"
                            android:padding="10dp"
                            android:text="@string/help_cocoin_content_8"
                            android:textColor="@color/my_blue"
                            android:textSize="15sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/help_cocoin_image_8"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp" />

                        <TextView
                            android:id="@+id/help_cocoin_content_9"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical|left"
                            android:layout_marginLeft="10dp"
                            android:gravity="left"
                            android:padding="10dp"
                            android:text="@string/help_cocoin_content_9"
                            android:textColor="@color/my_blue"
                            android:textSize="15sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/help_cocoin_image_9"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp" />

                        <TextView
                            android:id="@+id/help_cocoin_content_10"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical|left"
                            android:layout_marginLeft="10dp"
                            android:gravity="left"
                            android:padding="10dp"
                            android:text="@string/help_cocoin_content_10"
                            android:textColor="@color/my_blue"
                            android:textSize="15sp" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|left"
                        android:gravity="left"
                        android:padding="10dp"
                        android:text="@string/help_cocoin_content_1"
                        android:textColor="@color/my_blue"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/foot"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|left"
                        android:gravity="left"
                        android:padding="10dp"
                        android:text="@string/help_cocoin_content_11"
                        android:textColor="@color/my_blue"
                        android:textSize="15sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

</FrameLayout>